# cpufreq_rust

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: lib.rs
